Corrected Alignment on Namecard and Homepage quote

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -48,7 +48,5 @@ textarea {
     flex-wrap: wrap;
   }
 
-  #icons {
-    padding-top: 3;
-  }
+
 }
