--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -42,6 +42,13 @@
   background: #001F47;
 }
 
+.homepage-quote {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
 @media screen and (max-width: 768px) {
   .homepage-container {
     padding: 3em 3em;
@@ -53,8 +60,8 @@
   }
 
   .homepage-image {
-    max-height: 30vh;
-    max-width: 220px;
+    max-height: 40vh;
+    max-width: 230px;
     border: 2px solid white;
     border-radius: 15%;
     box-shadow: -8px 7px 0px #9D4C93;
